# graph-sql

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FAQ.md  LICENSE-APACHE  LICENSE-MIT  README.md  config.schema.json  diagram.md  example.config.toml  package.json
docs/: _meta.json  configuration-schema.md  index.md
docs/guide/: _meta.json  architecture.md  comparisons.md  configuration.md  development.md  examples.md  installation.md  library-api.md  limitations.md  quick-start.md  roadmap.md
examples/: README.md
examples/blog/: Cargo.toml  README.md  config.toml
examples/blog/migrations/: 20250803120000_blog_schema.down.sql  20250803120000_blog_schema.up.sql
examples/blog/src/: main.rs
examples/ecommerce/: Cargo.toml  README.md  config.toml
examples/ecommerce/migrations/: 20250803130000_ecommerce_schema.down.sql  20250803130000_ecommerce_schema.up.sql
examples/ecommerce/src/: main.rs
examples/tasks/: Cargo.toml  README.md  config.toml
examples/tasks/migrations/: 20250803140000_tasks_schema.down.sql  20250803140000_tasks_schema.up.sql
examples/tasks/src/: main.rs
migrations/: 20250730201446_bakery.up.sql
src/: cli.rs  config.rs  lib.rs  loader.rs  main.rs  parser.rs  resolvers.rs  traits.rs  types.rs  utils.rs
