[package]
name = "graph-sql"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-graphql = { version = "7.0.17", features = ["dataloader", "dynamic-schema"] }
async-graphql-axum = "7.0.17"
axum = { version = "0.8.4", features = ["macros"] }
sea-query = { version = "0.32.6", features = ["thread-safe", "backend-sqlite"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
tokio = { version = "1.47.0", features = ["full"] }
