[package]
name = "graph-sql"
version = "0.1.0"
edition = "2024"
authors = ["Karl Robeck Alferez <karlalferez@gmail.com>"]
description = "A GraphQL server with SQL database integration using async-graphql and SQLx"
license = "MIT OR Apache-2.0"
repository = "https://github.com/karlrobeck/graph-sql"
homepage = "https://github.com/karlrobeck/graph-sql"
documentation = "https://github.com/karlrobeck/graph-sql"
readme = "README.md"
keywords = ["graphql", "sql", "database", "api", "web"]
categories = ["web-programming", "database"]
rust-version = "1.86.0"

[dependencies]
anyhow = "1.0.98"
async-graphql = { version = "7.0.17", features = [
  "dataloader",
  "dynamic-schema",
] }
async-graphql-axum = "7.0.17"
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5.42", features = ["derive", "env"] }
sea-query = { version = "0.32.6", features = ["thread-safe", "backend-sqlite"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.141"
toml = "0.8.19"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "migrate",
] }
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[[example]]
name = "blog"
path = "examples/blog/src/main.rs"

[[example]]
name = "ecommerce"
path = "examples/ecommerce/src/main.rs"

[[example]]
name = "tasks"
path = "examples/tasks/src/main.rs"

[[example]]
name = "library"
path = "examples/library/src/main.rs"
